# LocalAutomation

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  engine.rs  lib.rs  main.rs  secrets.rs  tray.rs  watch.rs
src/components/: AutoNode.tsx  ConfigPanel.tsx  SettingsModal.tsx  TriggerConfig.tsx
src/lib/: backend.ts  flow.ts  i18n.ts  templates.ts
src/lib/__tests__/: flow.test.ts
src/state/: ui.ts
