[package]
name = "localautomation"
version = "0.5.0"
description = "LocalAutomation — automação de fluxos 100% local (n8n/Zapier offline)"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalAutomation"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localautomation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Motor JS dos nós "transformar"/"condição": boa = 100% Rust (Decisão nº 8
# previa o fallback — rquickjs/QuickJS em MSVC é risco de CI; reavaliar se o
# boa limitar).
boa_engine = "0.20"
# Nó de requisição HTTP (rustls, mesmo padrão do LocalFeed).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
# Nó de notificação (bandeja do SO).
notify-rust = "4"
# Gatilho "quando um arquivo aparecer numa pasta": vigia nativa do SO
# (ReadDirectoryChangesW no Windows) — o padrão pra file-watch em Rust.
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
