[package]
name = "localautomation"
version = "0.7.0"
description = "LocalAutomation — automação de fluxos 100% local (n8n/Zapier offline)"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalAutomation"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localautomation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon + image-png: fechar a janela minimiza pra bandeja e os gatilhos
# armados seguem valendo (agendamento não morre junto com a janela).
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Motor JS dos nós "transformar"/"condição": boa = 100% Rust (Decisão nº 8
# previa o fallback — rquickjs/QuickJS em MSVC é risco de CI; reavaliar se o
# boa limitar).
boa_engine = "0.20"
# Nó de requisição HTTP (rustls, mesmo padrão do LocalFeed).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
# Nó de notificação (bandeja do SO).
notify-rust = "4"
# Gatilho "quando um arquivo aparecer numa pasta": vigia nativa do SO
# (ReadDirectoryChangesW no Windows) — o padrão pra file-watch em Rust.
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
# Segredos das automações no cofre do SO — mesmo crate/padrão do LocalKeys.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Apaga da memória a cópia do segredo resolvido ao fim da execução.
zeroize = "1"
# Backup incremental precisa ESCREVER mtime no destino (a `std` só lê); sem
# isso a comparação por data nunca converge e todo backup vira integral.
filetime = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Autostart opcional (opt-in em Configurações): abrir com o sistema direto na
# bandeja, pra o gatilho diário sobreviver a um reinício.
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
# Lê a chave Run na mão pra decidir se o autostart precisa ser reimposto: o
# `is_enabled()` do plugin só checa se a entrada existe, sem comparar o caminho
# (então não enxerga uma entrada obsoleta), e não distingue "apagada" de
# "desligada pelo Gerenciador de Tarefas" — que pedem respostas opostas.
# Mesma versão que o auto-launch já usa: não entra crate nova na árvore.
winreg = "0.55"
